[package]
name = "pactorio"
version = "0.6.0"
authors = ["figsoda <figsoda@pm.me>"]
edition = "2021"
description = "Mod packager for Factorio"
readme = "README.md"
homepage = "https://github.com/figsoda/pactorio"
repository = "https://github.com/figsoda/pactorio"
license = "MPL-2.0"
keywords = ["factorio", "package"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.11", features = ["cargo", "derive", "unicode"] }
globset = "0.4.10"
is_executable = "1.0.1"
rpassword = "7.2.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
thiserror = "1.0.40"
toml = "0.7.3"
ureq = { version = "2.6.2", features = ["json"] }
walkdir = "2.3.3"
zstd = "*"

[dependencies.multipart]
version = "0.18.0"
default-features = false
features = ["client"]

[dependencies.zip]
version = "0.6.4"
default-features = false
features = ["bzip2", "deflate", "zstd"]

[build-dependencies]
clap = { version = "4.1.11", features = ["derive"] }
clap_complete = "4.2.0"
clap_mangen = "0.2.10"

[build-dependencies.zip]
version = "0.6.4"
default-features = false
features = ["bzip2", "deflate", "zstd"]

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
