[package]
name = "pactorio"
version = "0.6.0"
authors = ["figsoda <figsoda@pm.me>"]
edition = "2021"
description = "Mod packager for Factorio"
readme = "README.md"
homepage = "https://github.com/figsoda/pactorio"
repository = "https://github.com/figsoda/pactorio"
license = "MPL-2.0"
keywords = ["factorio", "package"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.13", features = ["cargo", "derive", "unicode"] }
globset = "0.4.14"
is_executable = "1.0.1"
rpassword = "7.3.1"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"
toml = "0.8.8"
ureq = { version = "2.9.1", features = ["json"] }
walkdir = "2.4.0"
zstd = "*"

[dependencies.multipart]
version = "0.18.0"
default-features = false
features = ["client"]

[dependencies.zip]
version = "0.6.6"
default-features = false
features = ["bzip2", "deflate", "zstd"]

[build-dependencies]
clap = { version = "4.4.13", features = ["derive"] }
clap_complete = "4.4.6"
clap_mangen = "0.2.16"

[build-dependencies.zip]
version = "0.6.6"
default-features = false
features = ["bzip2", "deflate", "zstd"]

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
